test/files/neg/t12159c/H.java
// javaVersion: 17+
package p;

sealed abstract public class H {
}

final class J extends H {
}

final class K extends H {
}

final class L extends H {
}
